--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -22,6 +22,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
+        
         <Grid.Background>
             <ImageBrush ImageSource="Assets/Background.png"/>
         </Grid.Background>
@@ -34,7 +35,8 @@
                     Width="250"
                     Height="500"
                     ClipToBounds="True"
-                    Loaded="GameCanvas_Loaded" />
+                    Loaded="GameCanvas_Loaded" 
+                    />
         </Viewbox>
 
         <TextBlock x:Name="ScoreText"
@@ -88,6 +90,7 @@
                         Margin="0,20,0,0"
                         Padding="5"
                         Click="PlayAgain_Click"/>
+
             </StackPanel>
         </Grid>
             
