--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="Tetris" Height="600" Width="800"
         MinWidth="600" MinHeight="600"
         Foreground="White"
-        FontFamily="Sege UI Light" FontSize="28"
+        FontFamily="Segoe UI Light" FontSize="28"
         KeyDown="Window_KeyDown">
     <Grid>
         <Grid.RowDefinitions>
@@ -22,7 +22,6 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        
         <Grid.Background>
             <ImageBrush ImageSource="Assets/Background.png"/>
         </Grid.Background>
@@ -35,14 +34,13 @@
                     Width="250"
                     Height="510"
                     ClipToBounds="True"
-                    Loaded="GameCanvas_Loaded" 
-                    />
+                    Loaded="GameCanvas_Loaded"/>
         </Viewbox>
 
         <TextBlock x:Name="ScoreText"
                    Grid.Row="0"
                    Grid.Column="1"
-                   Text="Score"
+                   Text="Score: "
                    Margin="0, 10"
                    TextAlignment="Center"/>
 
@@ -80,6 +78,7 @@
                 <TextBlock Text="Game Over"
                            FontSize="48"
                            TextAlignment="Center"/>
+
                 <TextBlock x:Name="FinalScoreText"
                            Text="Score: "
                            FontSize="36"
@@ -90,10 +89,7 @@
                         Margin="0,20,0,0"
                         Padding="5"
                         Click="PlayAgain_Click"/>
-
             </StackPanel>
         </Grid>
-            
-                
     </Grid>
 </Window>
